--- a/CalTest/GoogleService-Info.plist
+++ b/CalTest/GoogleService-Info.plist
@@ -2,39 +2,33 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>AD_UNIT_ID_FOR_BANNER_TEST</key>
-	<string>ca-app-pub-3940256099942544/2934735716</string>
-	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
-	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>1035641024519-7inmuusuf87oera0ggpuege55ol5c3g0.apps.googleusercontent.com</string>
+	<string>149154097789-9gpr4d3kblqlqceucotpvb3ch6nkqv36.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.1035641024519-7inmuusuf87oera0ggpuege55ol5c3g0</string>
+	<string>com.googleusercontent.apps.149154097789-9gpr4d3kblqlqceucotpvb3ch6nkqv36</string>
 	<key>API_KEY</key>
-	<string>AIzaSyAQ3KJESSMK-4UtklS4lz53LYpMWmS699w</string>
+	<string>AIzaSyDlejMGkWrQE1RMzSLuPxvoHVZ0qdpl00U</string>
 	<key>GCM_SENDER_ID</key>
-	<string>1035641024519</string>
+	<string>149154097789</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.makeitfortheweb.friendal</string>
 	<key>PROJECT_ID</key>
-	<string>friendal-e8786</string>
+	<string>friendal</string>
 	<key>STORAGE_BUCKET</key>
-	<string>friendal-e8786.appspot.com</string>
+	<string>friendal.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<true></true>
+	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
 	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<false></false>
+	<true></true>
 	<key>IS_GCM_ENABLED</key>
 	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1035641024519:ios:ab9679e231f3f6b8</string>
-	<key>DATABASE_URL</key>
-	<string>https://friendal-e8786.firebaseio.com</string>
+	<string>1:149154097789:ios:9dd7230539a15bbe019f14</string>
 </dict>
 </plist>
