--- a/CalTest/Info.plist
+++ b/CalTest/Info.plist
@@ -29,7 +29,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>3</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>FacebookAppID</key>
 	<string>142371173196717</string>
 	<key>FacebookDisplayName</key>
