Initial Implementation of Firebase's AuthUI - Email and Password      Other Providers will be added before release Initial Implementation of adding User Information to Firestore at Signup Initial Implementation of Friends List: Retrieved from contacts

--- a/CalTest/Info.plist
+++ b/CalTest/Info.plist
@@ -50,6 +50,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSContactsUsageDescription</key>
+	<string>Your contacts' names and phone numbers are used to determine if they are existing users of Friendal. These users are then available on your friends list</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
