--- a/CalTest/Info.plist
+++ b/CalTest/Info.plist
@@ -45,7 +45,9 @@
 	<key>NSContactsUsageDescription</key>
 	<string>Your contacts' names and phone numbers are used to determine if they are existing users of Friendal. These users are then available on your friends list</string>
 	<key>UIBackgroundModes</key>
-	<array/>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
