--- a/CalTest/Info.plist
+++ b/CalTest/Info.plist
@@ -33,6 +33,8 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>FacebookAppID</key>
 	<string>142371173196717</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>LSApplicationQueriesSchemes</key>
 	<array/>
 	<key>LSRequiresIPhoneOS</key>
